# ROS2

./: CMakeLists.txt  README.md  package.xml
src/: main.cpp
veh_interfaces/: CMakeLists.txt  package.xml
veh_interfaces/msg/: DegradationInfo.msg  Obj.msg
