cmake_minimum_required(VERSION 3.16.3)
project(qtros2_exec)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

find_package(ament_cmake REQUIRED)
find_package(ament_index_cpp REQUIRED)

find_package(geometry_msgs REQUIRED)
find_package(interactive_markers REQUIRED)
find_package(pluginlib REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5Quick REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_components REQUIRED)

find_package(std_srvs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_typesupport_cpp REQUIRED)

find_package(rosidl_generator_cpp REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(veh_interfaces)


set(THIS_PACKAGE_INCLUDE_DEPENDS
    ament_index_cpp

    geometry_msgs
    rclcpp
    std_msgs
    std_srvs
)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)



###########
## Build ##
###########

add_executable(${PROJECT_NAME}
  src/main.cpp

  src/custom_widgets/lineedit.cpp

  include/qtros2/custom_widgets/lineedit.hpp
)
# rosidl_generate_interfaces(qtros2_exec
# "msg/Message.msg"
#   DEPENDENCIES std_msgs
# )

target_include_directories(${PROJECT_NAME}
  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  PUBLIC $<INSTALL_INTERFACE:include>)

# ament_target_dependencies(${PROJECT_NAME} SYSTEM rviz_visual_tools)
# ament_export_dependencies(rosidl_default_runtime)
ament_target_dependencies(${PROJECT_NAME} ${THIS_PACKAGE_INCLUDE_DEPENDS} rosidl_typesupport_cpp veh_interfaces)

target_link_libraries(${PROJECT_NAME}
${rosidl_typesupport_cpp_LIBRARIES}
  ${moveit_ros_planning_LIBRARIES}
  Qt5::Core
  Qt5::Quick
  Qt5::Widgets
)

target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra)


# Install executables
install(
  TARGETS
    ${PROJECT_NAME}
  ARCHIVE DESTINATION lib/${PROJECT_NAME}
  LIBRARY DESTINATION lib/${PROJECT_NAME}
  RUNTIME DESTINATION lib/${PROJECT_NAME}
)
# Install include, launch, config directories
install(
  DIRECTORY
    launch
    resources
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
